test-cluster-policy.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nonroot-pod
spec:
  securityContext:
    runAsNonRoot: false
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "9999"]
