svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"name":"front-end"},"name":"front-end","namespace":"default"},"spec":{"ports":[{"nodePort":30001,"port":80,"targetPort":8079}],"selector":{"name":"front-end"},"type":"LoadBalancer"}}
  creationTimestamp: "2022-01-11T19:00:30Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    name: front-end
  name: front-end
  namespace: default
  resourceVersion: "143254"
  uid: 87658e3e-7a06-4c00-a1ca-43d163a683a5
spec:
  clusterIP: 10.100.60.106
  clusterIPs:
  - 10.100.60.106
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 8079
  selector:
    name: front-end
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: a87658e3e7a064c00a1ca43d163a683a-547424777.us-west-2.elb.amazonaws.com
